--- a/pharmacien.html
+++ b/pharmacien.html
@@ -3,43 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pharmacien</title>
+  <title>💊 PharmaConnect - Pharmacien</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <style>
+    body { background-color: #f8f9fa; }
+    .card-status-En\ attente { border-left: 5px solid #ffc107; }
+    .card-status-Confirmée { border-left: 5px solid #28a745; }
+    .card-status-Refusée { border-left: 5px solid #dc3545; }
+    .btn-sm { margin-right: 5px; }
+  </style>
 </head>
 <body class="p-4">
 
-  <div class="d-flex justify-content-between mb-4">
+  <div class="d-flex justify-content-between align-items-center mb-4">
     <h3 id="pharmaName">Pharmacie</h3>
     <button id="btnLogout" class="btn btn-danger">Déconnexion</button>
   </div>
 
-  <!-- Formulaire pour ajouter/modifier un médicament -->
-  <div class="card mb-4">
+  <!-- Gestion des médicaments -->
+  <div class="card mb-4 shadow-sm">
     <div class="card-header"><h5>Gérer les Médicaments</h5></div>
     <div class="card-body">
-      <div class="mb-3">
-        <label for="medNom" class="form-label">Nom du médicament</label>
-        <input type="text" id="medNom" class="form-control" placeholder="Ex: Paracétamol">
+      <div class="row g-3">
+        <div class="col-md-4">
+          <input type="text" id="medNom" class="form-control" placeholder="Nom du médicament">
+        </div>
+        <div class="col-md-3">
+          <input type="number" id="medQuantite" class="form-control" placeholder="Quantité">
+        </div>
+        <div class="col-md-3">
+          <input type="number" id="medPrix" class="form-control" placeholder="Prix (FCFA)">
+        </div>
+        <div class="col-md-2">
+          <input type="hidden" id="editMedId">
+          <button id="btnAddMed" class="btn btn-primary w-100">Ajouter / Modifier</button>
+        </div>
       </div>
-      <div class="mb-3">
-        <label for="medQuantite" class="form-label">Quantité</label>
-        <input type="number" id="medQuantite" class="form-control" placeholder="Ex: 50">
-      </div>
-      <div class="mb-3">
-        <label for="medPrix" class="form-label">Prix (FCFA)</label>
-        <input type="number" id="medPrix" class="form-control" placeholder="Ex: 500">
-      </div>
-      <input type="hidden" id="editMedId">
-      <button id="btnAddMed" class="btn btn-primary">Ajouter / Modifier</button>
     </div>
   </div>
 
-  <!-- Tableau des médicaments -->
-  <div class="card">
+  <!-- Liste des médicaments -->
+  <div class="card mb-4 shadow-sm">
     <div class="card-header"><h5>Liste des Médicaments</h5></div>
     <div class="card-body">
-      <table class="table table-striped" id="medTable">
+      <table class="table table-striped table-hover" id="medTable">
         <thead>
           <tr>
             <th>Nom</th>
@@ -53,6 +61,14 @@
     </div>
   </div>
 
-  <script src="pharmacien.js"></script>
+  <!-- Commandes des patients -->
+  <div class="card shadow-sm">
+    <div class="card-header"><h5>Commandes Patients</h5></div>
+    <div class="card-body" id="listeCommandes">
+      <!-- Les commandes seront affichées ici -->
+    </div>
+  </div>
+
+  <script src="pharmacien.js" defer></script>
 </body>
 </html>
