--- a/patient.html
+++ b/patient.html
@@ -104,6 +104,8 @@
     </section>
   </div>
 
+  <!-- <div id="notifications" class="mt-3"></div> -->
+
   <script src="patient.js" defer></script>
 </body>
 </html>
